--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
-ANDREA RUBINO
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Andrea Rubino</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            text-align: center;
+        }
+        h1 {
+            color: #333;
+        }
+        img {
+            max-width: 100%;
+            height: auto;
+        }
+        p {
+            line-height: 1.6;
+            color: #666;
+        }
+        a {
+            color: #0066cc;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Titolo</h1>
+        <img src="IMG_20200602_111051.jpg" alt="Andrea Rubino">
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum. Cras porttitor metus justo, ut fringilla velit fermentum a. Proin consequat, ante quis pharetra rhoncus, mi lacus venenatis nisi, vel aliquet lorem nisi et sapien.
+        </p>
+        <p>
+            <a href="sezione1.html">Sezione 1</a> |
+            <a href="sezione2.html">Sezione 2</a> |
+            <a href="sezione3.html">Sezione 3</a>
+        </p>
+    </div>
+</body>
+</html>
+```
