--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Andrea Rubino</title>
+    <title>Document Title</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -22,7 +21,7 @@
             height: auto;
         }
         p {
-            line-height: 1.6;
+            line-height: 2.6;
             color: #666;
         }
         a {
@@ -36,7 +35,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Titolo</h1>
+        <h1>Andrea Rubino</h1>
         <img src="IMG_20200602_111051.jpg" alt="Andrea Rubino">
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum. Cras porttitor metus justo, ut fringilla velit fermentum a. Proin consequat, ante quis pharetra rhoncus, mi lacus venenatis nisi, vel aliquet lorem nisi et sapien.
@@ -49,4 +48,3 @@
     </div>
 </body>
 </html>
-```
