--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
             color: #333;
         }
         img {
-            max-width: 100%;
-            height: auto;
+            width: 300px; /* Imposta la larghezza desiderata */
+            height: 200px; /* Imposta l'altezza desiderata */
+            object-fit: cover; /* Riempi l'area senza deformare l'immagine */
+            border-radius: 50%; /* Imposta la forma dell'immagine (in questo caso, un cerchio) */
         }
         p {
             line-height: 2.6;
