--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         img {
             width: 100px; /* Imposta la larghezza desiderata */
             height: 50px; /* Imposta l'altezza desiderata */
-            object-fit: cover; /* Riempi l'area senza deformare l'immagine */
+            object-fit: fill; /* Riempi l'area senza deformare l'immagine */
             border-radius: 50%; /* Imposta la forma dell'immagine (in questo caso, un cerchio) */
         }
         p {
