--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         }
         h1 {
             color: #333;
+            font-size: 24px;
         }
         img {
             width: 100px; /* Imposta la larghezza desiderata */
@@ -23,7 +24,7 @@
             border-radius: 50%; /* Imposta la forma dell'immagine (in questo caso, un cerchio) */
         }
         p {
-            line-height: 2.6;
+            line-height: 1.6;
             color: #666;
         }
         a {
@@ -40,7 +41,9 @@
         <h1>Andrea Rubino</h1>
         <img src="IMG_20200602_111051.jpg" alt="Andrea Rubino">
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum. Cras porttitor metus justo, ut fringilla velit fermentum a. Proin consequat, ante quis pharetra rhoncus, mi lacus venenatis nisi, vel aliquet lorem nisi et sapien.
+            Andrea Rubino was born in Castellaneta, a town in the province of Taranto. Even as a child, he dreamed of planets and space, a passion that would never leave him but only grow stronger. In high school, he chose to study classics, wanting a well-rounded education as he knew he would later focus on the scientific world. Indeed, he decided to study aerospace engineering. As no university program in Puglia allowed him to delve into these topics, he chose to attend the Polytechnic University of Milan, which was the first in Italy for astrodynamics. He continued in Milan to pursue a Master's degree in Space Engineering, this time with a much stronger focus on space. He discovered that the Polytechnic University of Bari had established a PhD program in Aerospace Science and Engineering, so he decided to return to his region and conduct research in the field of fluid-structure interaction. Currently, Andrea is spending his final year of PhD studies as a visiting scholar at San Diego State University in California, United States. Always in search of new challenges, this summer Andrea was admitted to participate in the Space Studies Program organized by the International Space University, an opportunity only available to a select few students worldwide. This year's edition of the prestigious program will take place in Houston, an important location for the space sector. Rice University and NASA's Johnson Space Center will be the focal points around which the entire program will revolve, with the aim of providing a comprehensive view of the space sector. Tenacious and curious, he wants to leave his mark to improve life on our planet and take a leap to the edges of the universe.
+
+            Andrea Rubino nasce a Castellaneta, un paese in provincia di Taranto. Già da piccolo sogna i pianeti e lo spazio, passione che non lo abbandonerà mai ma che si rafforzerà sempre più. Alle scuole superiori sceglie gli studi classici: vuole avere una formazione completa, sa che successivamente si concentrerà sul mondo scientifico. Infatti, decide di studiare ingegneria aerospaziale: in Puglia non c'è ancora un indirizzo universitario che gli consenta di approfondire questi temi, decide di andare al Politecnico di Milano, primo in Italia per l'astrodinamica. Sempre a Milano, continua perseguendo una laurea magistrale in Space Engineering, questa volta molto più focalizzata in ambito spaziale. Scopre che al Politecnico di Bari è stato istituito il corso di dottorato in Scienze e Ingegneria Aerospaziali: decide quindi di tornare nella sua regione e di fare ricerca nel campo dell'interazione fluido-struttura. Attualmente, Andrea sta passando il suo ultimo anno di dottorato in visita presso la San Diego State University in California, negli Stati Uniti. Sempre alla ricerca di nuove sfide, quest'estate Andrea è stato ammesso a partecipare allo Space Studies Program organizzato dall'International Space University, un'opportunità disponibile solo per pochi studenti in tutto il mondo. L'edizione di quest'anno del prestigioso programma si terrà a Houston, un'importante location per il settore spaziale. La Rice University e il Johnson Space Center della NASA saranno i punti focali intorno ai quali ruoterà l'intero programma che avrà come obiettivo mostrare a 360° il mondo dello spazio. Tenace e curioso, vuole lasciare la sua impronta per migliorare la vita sul nostro pianeta e fare un salto ai confini dell'universo.
         </p>
         <p>
             <a href="sezione1.html">Sezione 1</a> |
