--- a/pagina-inglese.html
+++ b/pagina-inglese.html
@@ -48,16 +48,17 @@
 <body>
     <div class="container">
          <!-- Link alla pagina in italiano con bandierina -->
-        <a href="pagina-italiano.html">
+       <!-- <a href="pagina-italiano.html">
             <img src="bandiera-italia.png" alt="Italiano" width="30" height="20">
             Italiano
         </a>
 
         <!-- Link alla pagina in inglese con bandierina -->
-        <a href="pagina-inglese.html">
+       <!-- <a href="pagina-inglese.html">
             <img src="bandiera-inglese.png" alt="Inglese" width="30" height="20">
             Inglese
         </a>
+        <!-- hhh -->
         
         <h1>Andrea Rubino</h1>
         <img src="IMG_20200602_111051.jpg" alt="Andrea Rubino">
