--- a/index.html
+++ b/index.html
@@ -5,8 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Andrea Rubino</title>
     <style>
+        /* Stile del body */
         body {
+            background-color: #000; /* Imposta il colore di sfondo in nero */
+            /* background-image: url('sfondo.jpg'); */
+            /* Imposta l'immagine di sfondo (commenta la riga precedente e scommenta questa per utilizzarla) */
+            background-size: cover; /* Dimensiona l'immagine di sfondo per coprire l'intera area */
+            background-position: center; /* Centra l'immagine di sfondo */
+            background-repeat: no-repeat; /* Non ripete l'immagine di sfondo */
+            color: #fff; /* Imposta il colore del testo in bianco per una migliore leggibilità */
             font-family: Arial, sans-serif;
+        }
+
+        /* Stile dell'header */
+        header {
+            background-color: #fff; /* Imposta il colore di sfondo dell'header in bianco */
+            color: #000; /* Imposta il colore del testo nell'header in nero */
+            padding: 20px;
+        }
+
+        /* Stile del footer */
+        footer {
+            background-color: #fff; /* Imposta il colore di sfondo del footer in bianco */
+            color: #000; /* Imposta il colore del testo nel footer in nero */
+            padding: 20px;
         }
         .container {
             max-width: 800px;
