--- a/index.html
+++ b/index.html
@@ -7,29 +7,30 @@
     <style>
         /* Stile del body */
         body {
-            background-color: #000; /* Imposta il colore di sfondo in nero */
-            /* background-image: url('sfondo.jpg'); */
+           /* background-color: #000; /* Imposta il colore di sfondo in nero */
+             background-image: url('pexels-pixabayy-41951.jpg'); */
             /* Imposta l'immagine di sfondo (commenta la riga precedente e scommenta questa per utilizzarla) */
             background-size: cover; /* Dimensiona l'immagine di sfondo per coprire l'intera area */
             background-position: center; /* Centra l'immagine di sfondo */
             background-repeat: no-repeat; /* Non ripete l'immagine di sfondo */
-            color: #fff; /* Imposta il colore del testo in bianco per una migliore leggibilità */
+            color: #FFFFFF; /* Imposta il colore del testo in bianco per una migliore leggibilità */
             font-family: Arial, sans-serif;
         }
 
         /* Stile dell'header */
-        header {
+        /* header {
             background-color: #fff; /* Imposta il colore di sfondo dell'header in bianco */
-            color: #000; /* Imposta il colore del testo nell'header in nero */
-            padding: 20px;
+         /*   color: #000; /* Imposta il colore del testo nell'header in nero */
+        /*    padding: 20px;
         }
 
         /* Stile del footer */
-        footer {
+       /* footer {
             background-color: #fff; /* Imposta il colore di sfondo del footer in bianco */
-            color: #000; /* Imposta il colore del testo nel footer in nero */
-            padding: 20px;
-        }
+       /*     color: #000; /* Imposta il colore del testo nel footer in nero */
+       /*     padding: 20px; 
+        } */
+        
         .container {
             max-width: 800px;
             margin: 0 auto;
