--- a/index.html
+++ b/index.html
@@ -94,20 +94,22 @@
     </style>
 </head>
 <body>
+    <header>
     <div class="language-links">
         <!-- Link alla pagina in italiano con bandierina -->
         <a href="it.html">
-            <img src="bandiera-italia.png" alt="Italiano">
+            <img src="bandiera-italia.png" alt="IT">
             Italiano
         </a>
 
         <!-- Link alla pagina in inglese con bandierina -->
         <a href="en.html">
-            <img src="bandiera-inglese.png" alt="Inglese">
+            <img src="bandiera-inglese.png" alt="EN">
             Inglese
         </a>
     </div>
-    
+    </header>
+
     <div class="container">      
         <h1>Andrea Rubino</h1>
         <img src="IMG_20200602_111051.jpg" alt="Andrea Rubino">        
