--- a/index.html
+++ b/index.html
@@ -6,9 +6,16 @@
     <title>Andrea Rubino</title>
     <style>
         /* Stile del body */
+        html,
+        body {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+        }
+        
         body {
            /* background-color: #000; /* Imposta il colore di sfondo in nero */
-             background-image: url('pexels-pixabayy-41951.jpg'); */
+             background-image: url('pexels-pixabayy-41951.jpg'); 
             /* Imposta l'immagine di sfondo (commenta la riga precedente e scommenta questa per utilizzarla) */
             background-size: cover; /* Dimensiona l'immagine di sfondo per coprire l'intera area */
             background-position: center; /* Centra l'immagine di sfondo */
