--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         
         body {
            /* background-color: #000; /* Imposta il colore di sfondo in nero */
-             background-image: url('pexels-pixabayy-41951.jpg'); 
+             background-image: url('pexels-pixabay-41951.jpg'); 
             /* Imposta l'immagine di sfondo (commenta la riga precedente e scommenta questa per utilizzarla) */
             background-size: cover; /* Dimensiona l'immagine di sfondo per coprire l'intera area */
             background-position: center; /* Centra l'immagine di sfondo */
