--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             background-size: cover; /* Dimensiona l'immagine di sfondo per coprire l'intera area */
             background-position: center; /* Centra l'immagine di sfondo */
             background-repeat: no-repeat; /* Non ripete l'immagine di sfondo */
-            color: #FFFFFF; /* Imposta il colore del testo in bianco per una migliore leggibilità */
+            color: #fff !important; /* Imposta il colore del testo in bianco per una migliore leggibilità */
             font-family: Arial, sans-serif;
         }
 
