--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
             text-align: center;
         }
         h1 {
-            color: #333;
+            /* color: #333; */
+            color: #fff
             font-size: 48px;
         }
         img {
