--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
     <div class="container">      
         <h1>Andrea Rubino</h1>
-        <img src="IMG_20200602_111051.jpg" alt="Andrea Rubino">        
+        <img src="foto.jpg" alt="Andrea Rubino">        
     </div>
 </body>
 </html>
