--- a/en.html
+++ b/en.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Pagina EN</title>
+    <title>Homepage - Andrea Rubino</title>
     <link rel="stylesheet" href="en_styles.css">
 </head>
 
