--- a/en.html
+++ b/en.html
@@ -10,7 +10,7 @@
 <body class="home-page">
     <!-- Contenuto in alto: immagine B e testo 'ciao' -->
     <div class="header-content">
-        <img src="Immagine1.png" alt="Immagine B" class="image-b">
+        <img src="Immagine1.webp" alt="Immagine B" class="image-b">
         <h1 class="greeting-text">Andrea Rubino</h1>
     </div>
     
