--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ body {
 </head>
 <body>
     <div class="content">
-        <img src="1.png" alt="Main Image" class="main-image">
+        <img src="1.webp" alt="Main Image" class="main-image">
         <div class="language-links">
             <a href="en.html">ENTER</a>
         </div>
